add exceptions and fix directions